[package]
name = "tower-qos"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
tower-service = "0.2.0"
tower-layer = { version = "0.1", path = "../tower-layer"}
tokio-sync = "0.1.3"
tokio-timer = "0.2.6"
arc-swap = "0.3"

[dev-dependencies]
tower-test = { version = "0.1", path = "../tower-test" }
tokio = "0.1"
tokio-mock-task = "0.1.1"